--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,14 +14,14 @@
         android:layout_marginTop="12dp"
         android:text="회원이 아니신가요?"
         android:textColor="@color/ks_gray"
-        app:layout_constraintEnd_toStartOf="@+id/btn_change_password"
+        app:layout_constraintEnd_toStartOf="@+id/btn_sign_up"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_change_password" />
+        app:layout_constraintTop_toTopOf="@+id/btn_sign_up" />
 
     <Button
-        android:id="@+id/btn_change_password"
+        android:id="@+id/btn_sign_up"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="110dp"
         android:layout_height="40dp"
