--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="onClick"
         android:text="다음"
         android:textColor="#673AB7"
         android:textSize="18dp"
