--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,16 +42,14 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
-        android:background="@drawable/shape_round_corner_cyan_light_filled"
+        android:backgroundTint="@color/eg_cyan_light"
         android:onClick="onClick"
         android:text="로그인"
         android:textColor="#ffffff"
-        android:textSize="20dp"
+        android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw"
-        tools:textColor="#ffffff"
-        tools:textSize="16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/input_pw" />
 
     <EditText
         android:id="@+id/input_pw"
