--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,16 @@
     android:background="@color/eg_pastel_blue"
     tools:context=".ActivityLogin">
 
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintBottom_toTopOf="@+id/input_id"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/kuime_logo" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -38,11 +48,11 @@
     <Button
         android:id="@+id/btn_login"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="55dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="40dp"
-        android:backgroundTint="@color/eg_cyan_light"
+        android:backgroundTint="@color/km_main_color"
         android:onClick="onClick"
         android:text="로그인"
         android:textColor="#ffffff"
@@ -91,6 +101,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintVertical_bias="0.42000002"
         tools:textSize="14dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
