--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -97,4 +97,6 @@
     <color name="ks_light_gray">#dcdcdc</color>
     <color name="ks_white_yellow">#EBED87</color>
 
+    <color name="km_main_color">#96ACE6</color>
+
 </resources>
