--- a/app/src/main/res/layout/activity_sign_up_car.xml
+++ b/app/src/main/res/layout/activity_sign_up_car.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".activity.ActivitySignUpCar">
 
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:backgroundTint="#00BCD4"
+        android:onClick="onClick"
+        android:text="완료"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="100dp"
@@ -40,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.17"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sp_car_company2" />
+        app:layout_constraintTop_toBottomOf="@+id/sp_car_company" />
 
     <Button
         android:id="@+id/btn_back"
@@ -55,33 +68,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_next"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:backgroundTint="#FFFFFF"
-        android:onClick="onClick"
-        android:text="다음"
-        android:textColor="#673AB7"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btn_back" />
-
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
-        android:layout_height="58dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="8sp"
-        android:text="사용 중인 전기차를 \n골라주세요"
+        android:text="아직 차가 등록되지 않았어요! \n\n사용 중인 전기차를 \n골라주세요"
         android:textColor="@color/ks_gray"
         android:textSize="22dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_next" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_back" />
 
     <Spinner
         android:id="@+id/sp_car_model"
@@ -94,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <Spinner
-        android:id="@+id/sp_car_company2"
+        android:id="@+id/sp_car_company"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
