--- a/app/src/main/res/layout/activity_sign_up_car.xml
+++ b/app/src/main/res/layout/activity_sign_up_car.xml
@@ -8,16 +8,17 @@
 
     <Button
         android:id="@+id/btn_next"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:backgroundTint="#00BCD4"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="#FFFFFF"
         android:onClick="onClick"
-        android:text="완료"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="다음"
+        android:textColor="#673AB7"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/btn_back" />
 
     <ImageView
         android:id="@+id/imageView2"
