--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+        app:layout_constraintTop_toBottomOf="@+id/cl_card"
         app:srcCompat="@drawable/gray_bar" />
 
     <TextView
@@ -57,13 +57,14 @@
         app:srcCompat="@drawable/gray_bar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/cl_point"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="70dp"
+        android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView36">
+        app:layout_constraintTop_toBottomOf="@+id/btn_back">
 
         <TextView
             android:id="@+id/textView37"
@@ -108,20 +109,21 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
+        android:id="@+id/cl_car"
         android:layout_width="0dp"
         android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+        app:layout_constraintTop_toBottomOf="@+id/cl_point">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintLayout2"
+            android:id="@+id/cl_car"
             android:layout_width="0dp"
             android:layout_height="60dp"
+            android:onClick="onClick"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
+            app:layout_constraintTop_toBottomOf="@+id/cl_point">
 
             <TextView
                 android:id="@+id/textView37"
@@ -176,12 +178,14 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout3"
+        android:id="@+id/cl_card"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginTop="1dp"
+        android:onClick="onClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="251dp">
+        app:layout_constraintTop_toBottomOf="@+id/cl_car">
 
         <TextView
             android:id="@+id/textView37"
@@ -234,7 +238,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView39"
+            android:id="@+id/tv_version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
@@ -252,11 +256,12 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_logout"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/km_main_color"
+        android:onClick="onClick"
         android:text="로그아웃"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
