--- a/app/src/main/res/layout/list_item_history.xml
+++ b/app/src/main/res/layout/list_item_history.xml
@@ -4,34 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/area_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/shape_round_corner_pastel_green_hollow">
+    android:layout_height="wrap_content">
 
 
     <TextView
-        android:id="@+id/tv_charger_name"
+        android:id="@+id/tv_charge_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
-        android:text="사용 중"
+        android:text="충전"
         android:textColor="@color/bright_red"
-        android:textSize="22dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_charge_date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_charge_used"
+        android:textSize="26dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_charge_date"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/tv_charge_used"
+        android:id="@+id/tv_earning_fee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="+ 10,000원"
+        android:textColor="@color/bright_red"
+        android:textSize="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tv_charge_type"
+        app:layout_constraintTop_toBottomOf="@+id/tv_charge_type" />
+
+    <TextView
+        android:id="@+id/tv_charge_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
-        android:text="1충전기 (완속)"
+        android:text="07.09"
         android:textColor="@color/ks_gray"
-        android:textSize="22dp"
+        android:textSize="26dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_alarm_dot"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,9 +54,9 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="12dp"
         android:background="@drawable/circle_cyan_dark"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_charge_used"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_charge_date"
         app:layout_constraintEnd_toStartOf="@+id/tv_charge_date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_charge_used" />
+        app:layout_constraintTop_toTopOf="@+id/tv_charge_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
