--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -27,8 +27,8 @@
         android:text="휴대폰 번호"
         android:textColor="@color/ks_gray"
         android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintStart_toStartOf="@+id/et_name"
+        app:layout_constraintTop_toBottomOf="@+id/et_name" />
 
     <Button
         android:id="@+id/btn_back"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_next" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/et_name"
         android:layout_width="281dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
-        android:id="@+id/editTextPhone"
+        android:id="@+id/et_phone"
         android:layout_width="212dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -98,10 +98,11 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:backgroundTint="#00BCD4"
+        android:onClick="onClick"
         android:text="인증"
         android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
-        app:layout_constraintStart_toEndOf="@+id/editTextPhone" />
+        app:layout_constraintBottom_toBottomOf="@+id/et_phone"
+        app:layout_constraintStart_toEndOf="@+id/et_phone" />
 
     <EditText
         android:id="@+id/editTextNumber"
@@ -113,7 +114,7 @@
         android:inputType="number"
         android:textColor="@color/ks_gray"
         android:textSize="20dp"
-        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+        app:layout_constraintStart_toStartOf="@+id/et_phone"
+        app:layout_constraintTop_toBottomOf="@+id/et_phone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
