--- a/app/src/main/res/layout/activity_charge.xml
+++ b/app/src/main/res/layout/activity_charge.xml
@@ -61,7 +61,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_station2"
+                android:id="@+id/tv_car"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
