--- a/app/src/main/res/layout/activity_charge.xml
+++ b/app/src/main/res/layout/activity_charge.xml
@@ -86,7 +86,7 @@
                 android:layout_marginEnd="50dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_station2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_car"
                 tools:context=".MapsActivity" />
 
             <Button
