--- a/app/src/main/res/layout/activity_reserve_connect.xml
+++ b/app/src/main/res/layout/activity_reserve_connect.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_back" />
 
     <TextView
-        android:id="@+id/tv_charger_name"
+        android:id="@+id/tv_charger_used"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -99,7 +99,7 @@
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_charger_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_charger_used"
         app:srcCompat="@drawable/car_connect" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
