--- a/app/src/main/res/layout/activity_reserve_time.xml
+++ b/app/src/main/res/layout/activity_reserve_time.xml
@@ -30,7 +30,7 @@
         android:gravity="center_horizontal"
         android:lineSpacingExtra="8sp"
         android:onClick="onClick"
-        android:text="PM 03:00"
+        android:text="03:00"
         android:textColor="@color/ks_gray"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView28"
@@ -78,7 +78,7 @@
         android:gravity="center_horizontal"
         android:lineSpacingExtra="8sp"
         android:onClick="onClick"
-        android:text="PM 06:00"
+        android:text="06:00"
         android:textColor="@color/ks_gray"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_date_picker2"
