--- a/app/src/main/res/layout/list_item_charger.xml
+++ b/app/src/main/res/layout/list_item_charger.xml
@@ -9,7 +9,7 @@
 
 
     <TextView
-        android:id="@+id/tv_charger_name"
+        android:id="@+id/tv_charger_used"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
@@ -19,11 +19,11 @@
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_charge_date"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_charge_used"
+        app:layout_constraintTop_toTopOf="@+id/tv_charge_name"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/tv_charge_used"
+        android:id="@+id/tv_charge_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
@@ -43,9 +43,9 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="12dp"
         android:background="@drawable/circle_cyan_dark"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_charge_used"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_charge_name"
         app:layout_constraintEnd_toStartOf="@+id/tv_charge_date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_charge_used" />
+        app:layout_constraintTop_toTopOf="@+id/tv_charge_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
