--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -78,7 +78,7 @@
         app:srcCompat="@drawable/small_dot_pink" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
