--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -59,7 +59,7 @@
             android:layout_height="70dp"
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="@+id/tv_station"
-            app:layout_constraintTop_toBottomOf="@+id/tv_car_model"
+            app:layout_constraintTop_toBottomOf="@+id/tv_car_company"
             app:srcCompat="@drawable/battery3" />
 
         <TextView
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toTopOf="@+id/iv_next" />
 
         <TextView
-            android:id="@+id/tv_car_model"
+            android:id="@+id/tv_car_company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -158,7 +158,7 @@
             app:layout_constraintTop_toTopOf="@+id/iv_next" />
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/tv_car_company"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -177,7 +177,7 @@
             android:textColor="@color/ks_gray"
             android:textSize="26dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView17" />
+            app:layout_constraintStart_toStartOf="@+id/tv_car_company" />
 
         <ImageView
             android:id="@+id/iv_next"
