--- a/app/src/main/res/layout/activity_reserve_time.xml
+++ b/app/src/main/res/layout/activity_reserve_time.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".activity.ActivityReserveService">
 
-    <TextView
+    <EditText
         android:id="@+id/tv_date_picker2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:gravity="center_horizontal"
+        android:inputType="text"
         android:lineSpacingExtra="8sp"
         android:onClick="onClick"
         android:text="07/04"
@@ -22,7 +23,7 @@
         app:layout_constraintTop_toTopOf="@+id/textView29"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <EditText
         android:id="@+id/tv_time_picker1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,6 +32,7 @@
         android:lineSpacingExtra="8sp"
         android:onClick="onClick"
         android:text="03:00"
+        android:inputType="text"
         android:textColor="@color/ks_gray"
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView28"
@@ -54,13 +56,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.39" />
 
-    <TextView
+    <EditText
         android:id="@+id/tv_date_picker1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
         android:gravity="center_horizontal"
-        android:lineSpacingExtra="8sp"
         android:onClick="onClick"
         android:text="07/04"
         android:textColor="@color/ks_gray"
@@ -70,13 +71,12 @@
         app:layout_constraintTop_toTopOf="@+id/textView28"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
+    <EditText
         android:id="@+id/tv_time_picker2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:gravity="center_horizontal"
-        android:lineSpacingExtra="8sp"
         android:onClick="onClick"
         android:text="06:00"
         android:textColor="@color/ks_gray"
