--- a/app/src/main/res/layout/activity_car.xml
+++ b/app/src/main/res/layout/activity_car.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/white"
+        android:onClick="onClick"
         android:text="+ 차량 추가 등록"
         android:textColor="@color/ks_gray"
         android:textSize="24dp"
