--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -83,6 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/white"
+        android:onClick="onClick"
         android:text="+ 결제 카드 등록하기"
         android:textColor="@color/ks_gray"
         android:textSize="24dp"
