--- a/app/src/main/res/layout/list_item_history.xml
+++ b/app/src/main/res/layout/list_item_history.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/area_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/eg_pastel_blue">
 
 
     <TextView
@@ -31,6 +32,7 @@
         android:text="+ 10,000원"
         android:textColor="@color/bright_red"
         android:textSize="32dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tv_charge_type"
         app:layout_constraintTop_toBottomOf="@+id/tv_charge_type" />
