--- a/app/src/main/res/drawable/shape_squared_corner_shadow.xml
+++ b/app/src/main/res/drawable/shape_squared_corner_shadow.xml
@@ -3,10 +3,13 @@
     <!-- Drop Shadow Stack -->
     <item>
     <shape>
-        <padding android:bottom="2.5dp"
-            android:left="2.5dp"
-            android:right="2.5dp"
-            android:top="2.5dp" />
+        <padding android:bottom="0.5dp"
+            android:left="0.5dp"
+            android:right="0.5dp"
+            android:top="0.5dp" />
         <solid android:color="#00CCCCCC" />
-    </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#06CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#09CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#0BCCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#0DCCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#10CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#12CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#15CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#17CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="2.5dp" android:left="2.5dp" android:right="2.5dp" android:top="2.5dp" /> <solid android:color="#1ACCCCCC" /> </shape> </item> <!-- Background --> <item> <shape> <solid android:color="@android:color/white" /> </shape> </item> </layer-list>
+    </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left=".5dp" android:right="1.5dp" android:top="1.5dp" /> <solid android:color="#06CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" /> <solid android:color="#09CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" /> <solid android:color="#0BCCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" /> <solid android:color="#0DCCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" /> <solid android:color="#10CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" /> <solid android:color="#12CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" />
+    <solid android:color="#15CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" />
+    <solid android:color="#17CCCCCC" /> </shape> </item> <item> <shape> <padding android:bottom="1.5dp" android:left="1.5dp" android:right="1.5dp" android:top="1.5dp" />
+    <solid android:color="#1ACCCCCC" /> </shape> </item> <!-- Background --> <item> <shape> <solid android:color="@android:color/white" /> </shape> </item> </layer-list>
 
