--- a/app/src/main/res/layout/activity_reserve_time.xml
+++ b/app/src/main/res/layout/activity_reserve_time.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".activity.ActivityReserveService">
 
+    <ImageView
+        android:id="@+id/imageView18"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView27"
+        app:srcCompat="@drawable/clock" />
+
     <EditText
         android:id="@+id/tv_date_picker2"
         android:layout_width="wrap_content"
@@ -20,8 +30,7 @@
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView29"
         app:layout_constraintStart_toEndOf="@+id/textView28"
-        app:layout_constraintTop_toTopOf="@+id/textView29"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/textView29" />
 
     <EditText
         android:id="@+id/tv_time_picker1"
@@ -29,32 +38,31 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:gravity="center_horizontal"
+        android:inputType="text"
         android:lineSpacingExtra="8sp"
         android:onClick="onClick"
         android:text="03:00"
-        android:inputType="text"
         android:textColor="@color/ks_gray"
         android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView28"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_date_picker1"
         app:layout_constraintStart_toEndOf="@+id/tv_date_picker1"
-        app:layout_constraintTop_toTopOf="@+id/textView28"
+        app:layout_constraintTop_toTopOf="@+id/tv_date_picker1"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView28"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:gravity="center_horizontal"
         android:lineSpacingExtra="8sp"
         android:text="시작"
         android:textColor="@color/ks_gray"
         android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.169"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView18" />
 
     <EditText
         android:id="@+id/tv_date_picker1"
@@ -68,8 +76,7 @@
         android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView28"
         app:layout_constraintStart_toEndOf="@+id/textView28"
-        app:layout_constraintTop_toTopOf="@+id/textView28"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/textView28" />
 
     <EditText
         android:id="@+id/tv_time_picker2"
