--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -91,7 +91,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="비밀번호 입력"
-        android:inputType="textPersonName"
+        android:inputType="text|textPassword"
         android:textColor="@color/ks_gray"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -104,7 +104,7 @@
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="비밀번호 확인"
-        android:inputType="textPersonName"
+        android:inputType="textPersonName|textPassword"
         android:textColor="@color/ks_gray"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="@+id/textView8"
