--- a/app/src/main/res/layout/activity_fee.xml
+++ b/app/src/main/res/layout/activity_fee.xml
@@ -6,30 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".activity.ActivityFee">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_fee_date"
-        app:layout_constraintEnd_toStartOf="@+id/tv_fee_date"
-        app:layout_constraintTop_toTopOf="@+id/tv_fee_date"
-        app:srcCompat="@drawable/small_dot_pink" />
-
     <TextView
-        android:id="@+id/tv_fee_date"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView20"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:gravity="center_horizontal"
-        android:lineSpacingExtra="8sp"
-        android:text="지난 하루 동안의 요금"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:lineSpacingExtra="6dp"
+        android:text="선택한 날짜의 실시간 전기 요금을 보여줍니다. \n해당 수치는 공급예비력, 전력 부하 데이터를 기반으로 \n기존 전기 요금을 보완한 금액입니다."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chart" />
+
+    <Button
+        android:id="@+id/btn_month_day_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="68dp"
+        android:layout_marginBottom="30dp"
+        android:backgroundTint="@color/eg_pastel_blue"
+        android:onClick="onClick"
+        android:text="08월 22일"
         android:textColor="@color/ks_gray"
-        android:textSize="21dp"
-        android:textStyle="normal"
+        android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/chart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -69,6 +71,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:layout_constraintVertical_bias="0.29000002" />
+        app:layout_constraintVertical_bias="0.45" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
